Fix hero text alignment

--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -11,6 +11,7 @@
 .hero-content {
     bottom: 0;
     position: absolute;
+    right: 0;
 }
 
 .hero-subcopy {
